# phoenix

./: CMakeLists.txt  README.md  document_view.cpp  document_view.h  main.cpp  main_window.cpp  main_window.h  phoenix_view.cpp  phoenix_view.h
data/: action_script.h  bitmap.h  bitmap_instance.h  color_transform.h  document.cpp  document.h  dom_element.cpp  dom_element.h  edge.cpp  edge.h  element.cpp  element.h  fill_style.cpp  fill_style.h  fla_document.cpp  fla_document.h  folder.h  frame.cpp  frame.h  group.cpp  group.h  layer.cpp  layer.h  linear_gradient.cpp  linear_gradient.h  morph_curves.h  oval_primitive.h  path.cpp  path.h  point.h  printer_settings.cpp  printer_settings.h  publish_history.h  radial_gradient.cpp  radial_gradient.h  rect.cpp  rect.h  rectangle_primitive.cpp  rectangle_primitive.h  resource.h  (+24 more)
docs/: FLA_FORMAT.md
gui/: document_view.cpp  document_view.h  layers_panel.cpp  layers_panel.h  main_window.cpp  main_window.h  phoenix_view.cpp  phoenix_view.h  player.h  timeline_view.cpp  timeline_view.h  timelines_panel.cpp  timelines_panel.h
parse/: document_parser.cpp  document_parser.h  fla_parser.cpp  fla_parser.h  path_parser.cpp  path_parser.h  zip_reader.cpp  zip_reader.h
parser/: document_parser.cpp  document_parser.h  fla_parser.cpp  fla_parser.h  path_parser.cpp  path_parser.h
src/data/: action_script.cpp  bitmap.cpp  bitmap.h  bitmap_instance.h  document.cpp  dom_element.h  edge.h  element.cpp  fill_style.h  fla_document.cpp  folder.h  frame.h  group.cpp  group.h  layer.h  linear_gradient.cpp  linear_gradient.h  morph_segment.h  morph_shape.h  oval_primitive.cpp  oval_primitive.h  publish_history.cpp  publish_history.h  radial_gradient.h  rect.h  script_list.cpp  shape.cpp  shape.h  solid_color.h  static_text.h  swatch.h  swatch_list.cpp  symbol.cpp  symbol_instance.cpp  timeline.cpp  transform.h
src/gui/: as3_context.h  document_view.cpp  document_view.h  layers_panel.cpp  main_window.cpp  phoenix_view.cpp  player.cpp  timeline_view.cpp  timeline_view.h
src/parser/: document_parser.cpp  path_parser.cpp  path_parser.h  zip_reader.cpp
util/: zip_archive.cpp  zip_archive.h
